Fixed the desktop layout issues I was having with the image and text overlapping and not resizing properly.

--- a/stats-preview/src/Components/ContentGroupingFrame.scss
+++ b/stats-preview/src/Components/ContentGroupingFrame.scss
@@ -64,15 +64,12 @@
 }
 
 @media screen and (min-width:$MinBreakPointValue) {
-	.contentframe {
-		background-color: #C2C2C2;
-	}
-
 	.contentframe p {
 		text-align: start;
 		margin-left: 55px;
 		margin-right: 75px;
 	}
+
 
 	.stats-info{
 		flex-direction: row;
