--- a/stats-preview/src/Components/GroupImageFrame.scss
+++ b/stats-preview/src/Components/GroupImageFrame.scss
@@ -5,8 +5,9 @@
 }
 
 .imgframe img {
-	width: 100%;
-	height: auto;
+	height: 100%;
+	object-fit: cover;
+	display: block;
 }
 
 .relativewrap {
